[package]
name = "bitcoin_rust"
version = "0.1.0"
edition = "2021"
authors = ["Anonymous"]
description = "A simplified yet complete Bitcoin implementation written in Rust, designed for developer readability."
license = "MIT"

[dependencies]
sha2 = "0.10"
ripemd160 = "0.10"
secp256k1 = { version = "0.29", features = ["rand"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[dev-dependencies]
hex = "0.4"
